Branch entity and domain model are seperated